<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".View.AddActivity">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView"
            android:textSize="20sp" android:layout_marginTop="16dp"/>
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0">
    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:text="@string/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp" android:layout_marginStart="16dp" android:id="@+id/textView2"
            android:textSize="20sp"/>
    <TextView
            android:text="Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="140dp" android:layout_marginStart="96dp" android:id="@+id/textView9"
            android:textSize="20sp"/>
    <TextView
            android:text="End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="184dp" android:layout_marginStart="96dp" android:id="@+id/textView10"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp" android:layout_marginStart="16dp" android:id="@+id/textView3"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="316dp" android:layout_marginStart="16dp" android:id="@+id/textView4"
            android:textSize="20sp"/>
    <TextView
            android:text="Repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="236dp" android:layout_marginStart="16dp" android:id="@+id/textView7"
            android:textSize="20sp"/>
    <TextView
            android:text="Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="272dp" android:layout_marginStart="16dp" android:id="@+id/textView8"
            android:textSize="20sp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/switch1"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.185" android:text="@string/all_day"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/notification_switch"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.585"/>
    <TextView
            android:text="@string/color"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView5" android:textSize="20sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.689"/>
    <TextView
            android:text="@string/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView6" android:textSize="20sp"
            android:layout_marginTop="472dp"/>
    <EditText
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title_add"
            android:textSize="18sp"
            android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="@+id/toolbar"
    />
    <EditText
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/info_add"
            android:textSize="18sp" android:layout_marginTop="44dp"
            android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="44dp"
            android:layout_height="49dp"
            app:srcCompat="@drawable/ic_palette_black_24dp"
            android:layout_marginStart="16dp" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="400dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="44dp" app:srcCompat="@drawable/ic_date_range_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/imageView2" android:layout_marginStart="4dp"
            android:layout_marginTop="140dp" app:layout_constraintHorizontal_bias="0.006"/>
    <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/date_add" android:layout_marginTop="132dp" app:layout_constraintHorizontal_bias="0.915"/>
    <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/date_add2" android:layout_marginTop="176dp" app:layout_constraintHorizontal_bias="0.916"/>
    <Button
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/colorButton"
            android:layout_marginTop="404dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Spinner
            android:layout_width="131dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:prompt="@string/frequency"
            android:entries="@array/repeat_event"
            android:id="@+id/spinner" app:layout_constraintHorizontal_bias="0.928" android:layout_marginTop="240dp"/>
    <Button
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/save" android:layout_marginTop="500dp" app:layout_constraintHorizontal_bias="0.969"/>


</androidx.constraintlayout.widget.ConstraintLayout>